// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Users profile When user is logged-in and check their own profile renders the profile of the logged-in user 1`] = `
<main>
  <section
    className="user-header-content"
  >
    <figure
      className="profile-pic"
    >
      <img
        alt="User Name 1 User Lastname 1"
        src="/default_profile_picture.png"
      />
      <figcaption>
        <h1>
          User Name 1 User Lastname 1
        </h1>
        <h4>
          Contacto: user@email.com
        </h4>
      </figcaption>
    </figure>
    <section
      className="user-profile-buttons"
    >
      <a
        href="/users/me/edit"
        role="button"
      >
        Editar Perfil
      </a>
      <a
        href="/users/me/delete"
        role="button"
      >
        Eliminar Perfil
      </a>
    </section>
  </section>
  <section
    className="user-main-profile"
  >
    <aside
      className="user-info"
    >
      <section
        className="user-info-section"
      >
        <main
          className="deals-container"
        >
          <h4>
            Deals
          </h4>
          <ul
            className="deals-list"
          >
            <li>
              <article
                className="comment-summary"
              >
                <section
                  className="user-info"
                >
                  <a
                    href="/stores/6f4e5985-2ff8-4118-bbaf-e6004d757c13"
                    onClick={[Function]}
                  >
                    <figure>
                      <img
                        alt="Tienda 2"
                        src="/default_store_picture.png"
                      />
                    </figure>
                    <p>
                      abierto
                    </p>
                  </a>
                </section>
                <section
                  className="comment-text"
                >
                  <a
                    href="/stores/6f4e5985-2ff8-4118-bbaf-e6004d757c13/deals/2927c6bb-d0c4-4583-b75f-e21f1a30b497"
                    onClick={[Function]}
                  >
                    Tienda 2
                  </a>
                </section>
              </article>
            </li>
          </ul>
        </main>
      </section>
      <section
        className="user-info-section"
      >
        <main
          className="comments-container"
        >
          <h4>
            Comentarios
          </h4>
          <ul
            className="comments-list"
          >
            <li>
              <article
                className="comment-summary"
              >
                <section
                  className="user-info"
                >
                  <a
                    href="/users/96ab7b63-915e-442b-b83f-e0962bd2c8d8"
                    onClick={[Function]}
                  >
                    <figure>
                      <img
                        alt="User Name 1 User Name 1"
                        src="/default_profile_picture.png"
                      />
                    </figure>
                    <p>
                      4/5
                    </p>
                  </a>
                </section>
                <section
                  className="comment-text"
                >
                  Possitive comment
                </section>
              </article>
            </li>
            <li>
              <article
                className="comment-summary"
              >
                <section
                  className="user-info"
                >
                  <a
                    href="/users/96ab7b63-915e-442b-b83f-e0962bd2c8d8"
                    onClick={[Function]}
                  >
                    <figure>
                      <img
                        alt="User Name 1 User Name 1"
                        src="/default_profile_picture.png"
                      />
                    </figure>
                    <p>
                      1/5
                    </p>
                  </a>
                </section>
                <section
                  className="comment-text"
                >
                  Negative comment
                </section>
              </article>
            </li>
          </ul>
        </main>
      </section>
    </aside>
    <section
      className="stores-in-user"
    >
      <a
        className="new-store-button"
        href="/stores/new"
        role="button"
      >
        Crear tienda
      </a>
      <main>
        <h1>
          Lista de tiendas
        </h1>
        <section
          className="searchbar-container"
        >
          <input
            className="main-searchbar"
            onChange={[Function]}
            placeholder="Buscar tiendas"
            type="text"
            value=""
          />
        </section>
        <ul
          className="stores-list"
        >
          <li>
            <a
              className="store-summary"
              href="/stores/6f4e5985-2ff8-4118-bbaf-e6004d757c13"
              onClick={[Function]}
            >
              <article>
                <h1>
                  Store name 1
                </h1>
                <section>
                  <img
                    alt="Description 1"
                    src="/default_store_picture.png"
                  />
                </section>
                <p>
                  Dirección: Address 1
                </p>
              </article>
            </a>
          </li>
          <li>
            <a
              className="store-summary"
              href="/stores/9440a98a-2973-484b-b8bd-78beb6b24eef"
              onClick={[Function]}
            >
              <article>
                <h1>
                  Store name 3
                </h1>
                <section>
                  <img
                    alt="Description 3"
                    src="/default_store_picture.png"
                  />
                </section>
                <p>
                  Dirección: Address 3
                </p>
              </article>
            </a>
          </li>
        </ul>
      </main>
    </section>
  </section>
</main>
`;

exports[`Users profile When user is not logged-in renders the profile of a given user 1`] = `
<main>
  <section
    className="user-header-content"
  >
    <figure
      className="profile-pic"
    >
      <img
        alt="User Name 1 User Lastname 1"
        src="/default_profile_picture.png"
      />
      <figcaption>
        <h1>
          User Name 1 User Lastname 1
        </h1>
        <h4>
          Contacto: user@email.com
        </h4>
      </figcaption>
    </figure>
    <section
      className="user-profile-buttons"
    >
      <a
        href="/users/me/edit"
        role="button"
      >
        Editar Perfil
      </a>
      <a
        href="/users/me/delete"
        role="button"
      >
        Eliminar Perfil
      </a>
    </section>
  </section>
  <section
    className="user-main-profile"
  >
    <section
      className="stores-in-user"
    >
      <a
        className="new-store-button"
        href="/stores/new"
        role="button"
      >
        Crear tienda
      </a>
      <main>
        <h1>
          Lista de tiendas
        </h1>
        <section
          className="searchbar-container"
        >
          <input
            className="main-searchbar"
            onChange={[Function]}
            placeholder="Buscar tiendas"
            type="text"
            value=""
          />
        </section>
        <ul
          className="stores-list"
        >
          <li>
            <a
              className="store-summary"
              href="/stores/6f4e5985-2ff8-4118-bbaf-e6004d757c13"
              onClick={[Function]}
            >
              <article>
                <h1>
                  Store name 1
                </h1>
                <section>
                  <img
                    alt="Description 1"
                    src="/default_store_picture.png"
                  />
                </section>
                <p>
                  Dirección: Address 1
                </p>
              </article>
            </a>
          </li>
          <li>
            <a
              className="store-summary"
              href="/stores/9440a98a-2973-484b-b8bd-78beb6b24eef"
              onClick={[Function]}
            >
              <article>
                <h1>
                  Store name 3
                </h1>
                <section>
                  <img
                    alt="Description 3"
                    src="/default_store_picture.png"
                  />
                </section>
                <p>
                  Dirección: Address 3
                </p>
              </article>
            </a>
          </li>
        </ul>
      </main>
    </section>
  </section>
</main>
`;
